--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "test:prod": "node test-critical-paths.js production"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@stripe/stripe-js": "^7.7.0",
+    "@tanstack/react-query": "^5.84.1",
+    "axios": "^1.11.0",
     "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
@@ -21,10 +24,14 @@
     "jspdf-autotable": "^5.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.7.1",
-    "recharts": "^3.1.0"
+    "recharts": "^3.1.0",
+    "socket.io-client": "^4.8.1",
+    "zod": "^4.0.14",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -37,6 +44,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "js-yaml": "^4.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "vite": "^7.0.4"
