Update Vercel configuration for serverless functions

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,11 @@
   "rewrites": [
     { "source": "/(.*)", "destination": "/" }
   ],
+  "functions": {
+    "api/*.js": {
+      "maxDuration": 10
+    }
+  },
   "env": {
     "NODE_ENV": "production"
   },
